--- a/web/assets/variables.scss
+++ b/web/assets/variables.scss
@@ -2,3 +2,9 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+
+$color--white-subtle: darken(#fff, 10%);
+
+$color--red: #db0000;
+$color--red-darken: darken( $color--red, 20% );
