add reviews page

--- a/web/assets/variables.scss
+++ b/web/assets/variables.scss
@@ -7,3 +7,5 @@ $color--white-subtle: darken(#fff, 10%);
 
 $color--red: #db0000;
 $color--red-darken: darken( $color--red, 20% );
+
+$standard-shadow: 0 4px 5px #100a;
